package goal;
public interface IGoal {
    public boolean isThisWeeksGoalAchieved(Goal goal);
    public boolean wasLastWeeksGoalAchieved(Goal goal);

}