package goal;

public enum SportType {
    RUNNING, SWIMMING, CYCLING
}
