package pet;

public enum PetHealthStatus {
    HEALTHY, SICK, DEAD
}
